# smart-repo-init

./: .coderabbit.yaml  .gitignore  QUICKREF.md  README.md  START_HERE.md  STRUCTURE.txt  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.sh
docs/: CODERABBIT_WORKFLOW.md  INDEX.md  SUMMARY.md
scripts/: full_init_project.py  init_project_v2.py  install.sh  quick_init_project.py  quick_init_v2.py  tui_init.py  uninstall.sh
templates/: claude  copilot-instructions.md  cursorrules  dockerignore  gitattributes  gitignore.generic  pre-commit
tests/: __init__.py  test_full_init_project.py  test_init_project_v2.py  test_quick_init_project.py  test_quick_init_v2.py
